--- a/sass/layots/_hero.scss
+++ b/sass/layots/_hero.scss
@@ -17,31 +17,30 @@
 
 
 .overlay {
-    text-align: center;
-    padding: 118px 0;
-    max-width: 1600px;
+        text-align: center;
+        padding: 118px 0;
+        max-width: 1600px;
+        margin-left: auto;
+        margin-right: auto;
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url(../images/Img-team-480.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        background-color: #c4c4c4;
 
-    margin-left: auto;
-    margin-right: auto;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),
-            rgba(47, 48, 58, 0.4)),
-        url(../images/Img-team-480.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    
-    @media (min-device-pixel-ratio: 2),
+        @media (min-device-pixel-ratio: 2),
         (-webkit-min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
                 url(../images/Img-team-480-2x.jpg);
         }
-    
+
         @media screen and (min-width: 768px) and (max-width: 1199.5px) {
             background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
                 url(../images/Img-team-768.jpg);
-    
+
             @media (min-device-pixel-ratio: 2),
             (-webkit-min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
@@ -50,13 +49,13 @@
                     url(../images/Img-team-768-2x.jpg);
             }
         }
-    
+
         @media screen and (min-width: 1200px) {
-padding: 200px 0;
+            padding: 200px 0;
             align-items: center;
             background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
                 url(../images/Img-team-1600.jpg);
-    
+
             @media (min-device-pixel-ratio: 2),
             (-webkit-min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
@@ -65,7 +64,7 @@ padding: 200px 0;
                     url(../images/Img-team-1600-2x.jpg);
             }
         }
-}
+    }
 
 
 
