--- a/sass/layots/_hero.scss
+++ b/sass/layots/_hero.scss
@@ -34,7 +34,7 @@
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-                url(../images/Img-team-480.jpg);
+                url(../images/Img-team-480-2x.jpg);
         }
 
         @media screen and (min-width: 768px) and (max-width: 1199.5px) {
